プロジェクト参照の修正

--- a/CLIUtilities.Tests/CLIUtilities.Tests.csproj
+++ b/CLIUtilities.Tests/CLIUtilities.Tests.csproj
@@ -5,7 +5,7 @@
 
     <IsPackable>false</IsPackable>
 
-    <StartupObject>mylib.CLI.Test.MainClass</StartupObject>
+    <StartupObject></StartupObject>
 
     <AssemblyName>Test-CLIUtil</AssemblyName>
   </PropertyGroup>
