--- a/CLIUtilities/CLIUtilities.csproj
+++ b/CLIUtilities/CLIUtilities.csproj
@@ -1,15 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>CLIUtilities</AssemblyName>
     <RootNamespace>mylib.CLI</RootNamespace>
     <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\CLIUtilities.xml</DocumentationFile>
-    <OutputPath>bin\Release</OutputPath>
+    <DocumentationFile>bin\Release\netstandard2.1\CLIUtilities.xml</DocumentationFile>
+    <OutputPath>bin\Release\netstandard2.1</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile></DocumentationFile>
+    <OutputPath></OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
