--- a/CLIUtilities.Tests/CLIUtilities.Tests.csproj
+++ b/CLIUtilities.Tests/CLIUtilities.Tests.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\cLIUtilities\CLIUtilities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TestDatas\" />
+  </ItemGroup>
+
 </Project>
